<resources>
    <string name="app_name">MECEAP</string>
    <string name="api_server">http://192.168.0.15/api</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">meceap.server@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="avatar_description">This component will be the class of AppCompatImageView which is customizable to display Avatar</string>
    <string name="statusIndicator_description">This component will be the class of View which is customizable to display status of the user</string>
    <string name="badgeCount_description">This component will be the class of LinearLayout which is customizable to display the unread count of the messages in conversations.</string>
    <string name="settings_bg_color_confirm">Background Confirm</string>
    <string name="settings_default_color_confirm">Default Confirm</string>
    <string name="settings_bg_color_dialog">Background Color</string>
    <string name="userlist_description">This component will be the class of RecyclerView which is customizable to display list of users</string>
    <string name="grouplist_description">This component will be the class of RecyclerView which is customizable to display list of groups</string>
    <string name="conversationlist_description">This component will be the class of RecyclerView which is customizable to display list of recent conversation</string>
    <string name="copyright">\u00A9 2019 MECEAP Inc.</string>
    <string name="channel_description">channel_description</string>
    <string name="cometchat_unified_description">CometChat UI directly launches a fully function chat experience within your app. It contains all the features a standard chat application has and reduces the development time and effort considerably.</string>
    <string name="cometchat_screen_description">UI Components are individual components that can be used independently within your app to suit your requirements. These components are fully function which can be used to achieve specific use cases and reduce the development efforts considerably.</string>
    <string name="circle">circle</string>
    <string name="uicomponent_description">It show\'s list of core component which users can use at their end to create thier own chat app within minutes.</string>
    <string name="callList_description">This component will be the class of RecyclerView which is customizable to display list of calls.</string>
    <string name="topic">Emergency services in your hands</string>
    <string name="select">Select department to make a emergency call</string>
    <string name="use_credentials">Login using credentials</string>
    <string name="error_conect">Unable to connect to the server, click MECEAP logo to refresh</string>
    <string name="error_process">Please wait while we process the information</string>
    <string name="no_records">No records were found</string>


    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_maps">Maps</string>
    <string name="call">Efetue uma chamada de emêrgencia</string>
    <string name="google_maps_key">AIzaSyAyuaQS-AyNX5H9B0tntKHL9tpzrOnnBFs</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_calendar">Calendar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_agents">Your request has been registered, we will soon allocate agents to your address</string>
    <string name="error_comet_chat">Unable to create caller id to make a call</string>
    <string name="menu_occurrence_refresh">Refresh</string>
    <string name="menu_occurrence_filter">Filter</string>
    <string name="menu_logout">Logout</string>
</resources>