<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/dashboard"
            android:title="@string/menu_dashboard" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/person"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/calendar_startblue"
            android:title="@string/menu_calendar" />
        <item
            android:id="@+id/nav_maps"
            android:icon="@drawable/ic_maps"
            android:title="@string/menu_maps" />
    </group>
</menu>