<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_occurrence_refresh"
        android:orderInCategory="100"
        android:icon="@drawable/ic_refresh"
        android:title="@string/menu_occurrence_refresh"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_occurrence_filter"
        android:orderInCategory="100"
        android:icon="@drawable/ic_equalizer"
        android:title="@string/menu_occurrence_filter"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_logout"
        android:orderInCategory="100"
        android:title="@string/menu_logout"
        app:showAsAction="never" />
</menu>